--- a/css/clients.css
+++ b/css/clients.css
@@ -13,7 +13,19 @@
 }
 
 .clients__list-item {
-  --grid__item: 6;
+  --grid__item: 2;
+}
+
+@media screen and (min-width: 768px) {
+  .clients__list-item {
+    --grid__item: 3;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__list-item {
+    --grid__item: 6;
+  }
 }
 
 .clients__link {
