--- a/css/container.css
+++ b/css/container.css
@@ -1,11 +1,35 @@
 .container,
 .portfolio__container,
 .portfolio__container-footer {
-  width: 1200px;
+  width: 100%;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
   height: 100%;
+}
+
+@media screen and (min-width: 480px) {
+  .container,
+  .portfolio__container,
+  .portfolio__container-footer {
+    max-width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container,
+  .portfolio__container,
+  .portfolio__container-footer {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container,
+  .portfolio__container,
+  .portfolio__container-footer {
+    max-width: 1200px;
+  }
 }
 /*# sourceMappingURL=container.css.map */
