--- a/css/footer.css
+++ b/css/footer.css
@@ -2,11 +2,33 @@
   margin-right: auto;
   margin-left: auto;
   background-color: var(--bg-color);
-  padding-top: 60px;
 }
 
 .footer__contacts-blocks {
   display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__contacts-blocks {
+    justify-content: space-between;
+    flex-direction: row;
+    padding: 60px 15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__studio {
+    display: flex;
+    justify-content: space-around;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__studio {
+    flex-basis: calc((100% - 90px) / 2);
+  }
 }
 
 .footer__studio-logo {
@@ -109,7 +131,7 @@
 }
 
 .form {
-  margin-left: 93px;
+  margin-top: 60px;
 }
 
 .form__title {
@@ -123,8 +145,19 @@
   color: var(--title-name-color);
 }
 
+@media screen and (min-width: 1200px) {
+  .form__title {
+    text-align: start;
+  }
+}
+
 .form-footer__button {
-  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 60px;
+  max-width: 200px;
   height: 50px;
   padding: 10px 28px 10px 29px;
   margin-left: 12px;
@@ -132,6 +165,14 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
+  border: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .form-footer__button {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 
 .form-footer__button-text {
@@ -154,6 +195,12 @@
   fill: var(--title-name-color);
 }
 
+@media screen and (min-width: 1200px) {
+  .form-footer__button-icon {
+    margin-top: 0;
+  }
+}
+
 .form-footer__input {
   width: 358px;
   height: 50px;
@@ -170,7 +217,21 @@
   color: rgba(255, 255, 255, 0.6);
 }
 
+@media screen and (min-width: 768px) {
+  .form-footer__input {
+    max-width: 450px;
+  }
+}
+
 .form-footer {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .form-footer {
+    flex-direction: row;
+  }
 }
 /*# sourceMappingURL=footer.css.map */
