--- a/css/team.css
+++ b/css/team.css
@@ -48,8 +48,21 @@
 }
 
 .team__item {
-  --grid__item: 4;
+  --grid__item: 1;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+
+@media screen and (min-width: 768px) {
+  .team__item {
+    --grid__item: 2;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__item {
+    --grid__item: 4;
+  }
 }
 /*# sourceMappingURL=team.css.map */
