--- a/sass/components/team.scss
+++ b/sass/components/team.scss
@@ -45,7 +45,20 @@
 }
 
 .team__item {
---grid__item: 4;
+--grid__item: 1;
 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 0px 0px 4px 4px;
+
+@media screen  and (min-width: 480px) {
+        
+}
+
+@media screen  and (min-width: 768px) {
+    --grid__item: 2;
+    justify-content: center;
+
+}
+@media screen  and (min-width: 1200px) {
+    --grid__item: 4;
+}
 }
