--- a/sass/layouts/clients.scss
+++ b/sass/layouts/clients.scss
@@ -11,7 +11,18 @@
     margin-bottom: 50px;
 }
 .clients__list-item {
-    --grid__item: 6;   
+    --grid__item: 2; 
+
+    @media screen  and (min-width: 480px) {
+        
+    }
+    
+    @media screen  and (min-width: 768px) {
+        --grid__item: 3;
+    }
+    @media screen  and (min-width: 1200px) {
+        --grid__item: 6;
+    }
 }
 .clients__link {
     display: flex;
