--- a/sass/layouts/footer.scss
+++ b/sass/layouts/footer.scss
@@ -3,12 +3,28 @@
     margin-right: auto; 
     margin-left: auto;
     background-color: var(--bg-color);
-    padding-top: 60px;
 }
  .footer__contacts-blocks {
      display: flex;
- }
-  
+     flex-direction: column;
+     text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    justify-content:space-between;
+    flex-direction: row;
+    padding: 60px 15px ;
+  }
+}
+
+.footer__studio {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-around;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 90px) / 2);
+  }
+}
 .footer__studio-logo {
     display: block;
   margin-right: auto;
@@ -107,7 +123,7 @@ margin-right: 10px;
 }
 
 .form {
-    margin-left: 93px;
+    margin-top: 60px;
   }
   .form__title {
     font-family: Roboto;
@@ -118,9 +134,18 @@ margin-right: 10px;
     text-transform: uppercase;
     margin-bottom: 20px;
     color: var(--title-name-color);
+
+    @media screen and (min-width: 1200px) {
+      text-align: start;
+    }
   }
   .form-footer__button {
-    width: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 60px;
+    max-width: 200px;
     height: 50px;
     padding: 10px 28px 10px 29px;
     margin-left: 12px;
@@ -128,6 +153,12 @@ margin-right: 10px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     cursor: pointer;
+    border: none;
+
+    @media screen and (min-width: 1200px) {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
   }
   .form-footer__button-text {
     font-family: Roboto;
@@ -148,6 +179,10 @@ margin-right: 10px;
     height: 24px;
     margin-left: 10px;
     fill: var(--title-name-color);
+
+    @media screen and (min-width: 1200px) {
+      margin-top: 0;
+    }
   }
   .form-footer__input {
     width: 358px;
@@ -164,8 +199,18 @@ margin-right: 10px;
     line-height: 1.25;
   
     color: rgba(255, 255, 255, 0.6);
+
+    @media screen and (min-width: 768px) {
+      max-width: 450px;
+    }
   }
   .form-footer {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @media screen and (min-width: 1200px) {
+      flex-direction: row;
+    }
   }
 
