--- a/css/hero.css
+++ b/css/hero.css
@@ -5,7 +5,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  min-width: 100vh;
+  max-width: 100%;
   padding-top: 200px;
   padding-bottom: 200px;
   margin-left: auto;
@@ -16,8 +16,8 @@
   color: var(--title-name-color);
   font-style: normal;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.4;
+  font-size: 26px;
+  line-height: 42px;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   width: calc( 100% / 12 * 7);
@@ -27,5 +27,12 @@
   margin-right: auto;
   margin-bottom: 30px;
   text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.4;
+  }
 }
 /*# sourceMappingURL=hero.css.map */
