--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ img {
 .container,
 .portfolio__container,
 .portfolio__container-footer {
-  width: 1200px;
+  width: 100%;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
@@ -502,7 +502,7 @@ img {
 }
 
 .projects-list__card {
-  width: 370px;
+  min-width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
   border: 1px solid var(--prog-color);
